--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "embla-carousel": "^8.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "lucide-react": "^0.525.0",
     "next": "15.0.3",
     "react": "^18",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18",
-    "react-icons": "^5.3.0",
-    "react-audio-player": "^0.17.0"
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
+    "@types/node": "24.0.14",
     "eslint": "^8.52.0",
     "eslint-config-next": "15.0.3",
     "typescript": "^5.8.3"
