--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,13 +15,15 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "target": "ES2017"
   },
   "include": [
     "next-env.d.ts",
     "src/**/*.ts",
-    "src/**/*.tsx"
-, "src/components/AppAppBar.تsx"  ],
+    "src/**/*.tsx",
+    "src/components/AppAppBar.تsx"
+  ],
   "exclude": [
     "node_modules",
     "scripts"
