--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@types/node": "24.0.14",
+    "@types/react": "^19.1.8",
     "eslint": "^8.52.0",
     "eslint-config-next": "15.0.3",
     "typescript": "^5.8.3"
