--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "embla-carousel": "^8.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "hls.js": "^1.6.7",
     "lucide-react": "^0.525.0",
     "next": "15.0.3",
     "react": "^18",
