Apply daily subscribe email service to send email with HADITH EVERY DAY for the user

--- a/.env
+++ b/.env
@@ -1,2 +1,13 @@
 NODE_ENV=production 
 
+# إعدادات البريد الإلكتروني للأحاديث اليومية
+GMAIL_USER=CODE4EVER11@GMAIL.COM
+GMAIL_APP_PASSWORD=rbewhudqawezmmvs 
+EMAIL_FROM=CODE4EVER11@GMAIL.COM
+HADITH_API_KEY=$2y$10$SkIzIKolTdgbZlfDLbfdQVJbGM50UGKqu2EFPPPpfhkUDFfGzYa
+SITE_URL=https://msr-quran-app.vercel.app
+ENCRYPTION_KEY=quran-hadith-newsletter-secret-key-2024
+
+# إعدادات Next.js
+NEXTAUTH_URL=https://msr-quran-app.vercel.app
+NEXTAUTH_SECRET=msr-quran-app-nextauth-secret-2024-vercel
