--- a/package.json
+++ b/package.json
@@ -19,16 +19,21 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.1.2",
+    "axios": "^1.6.0",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^17.2.2",
     "embla-carousel": "^8.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "hls.js": "^1.6.7",
     "lucide-react": "^0.525.0",
     "next": "15.0.3",
+    "nodemailer": "^6.9.7",
     "react": "^18",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/node": "24.0.14",
