--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "embla-carousel-react": "^8.6.0",
     "hls.js": "^1.6.7",
     "lucide-react": "^0.525.0",
+    "mongodb": "^6.19.0",
     "next": "15.0.3",
     "nodemailer": "^6.9.7",
     "react": "^18",
