--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,17 +5,7 @@
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "icon-192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "icon-512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "type": "favicon.ico"
     }
   ],
   "start_url": ".",
