--- a/.env
+++ b/.env
@@ -1,17 +1,18 @@
-NODE_ENV=production 
+NODE_ENV=production
 
 # إعدادات البريد الإلكتروني للأحاديث اليومية
 GMAIL_USER=CODE4EVER11@GMAIL.COM
-GMAIL_APP_PASSWORD=rbewhudqawezmmvs 
+GMAIL_APP_PASSWORD=rbewhudqawezmmvs
 EMAIL_FROM=CODE4EVER11@GMAIL.COM
-EMAIL_USER=CODE4EVER11@GMAIL.COM
-EMAIL_PASS=rbewhudqawezmmvs
-HADITH_API_KEY=$2y$10$SkIzIKolTdgbZlfDLbfdQVJbGM50UGKqu2EFPPPpfhkUDFfGzYama
+
+# إعدادات الموقع
 SITE_URL=https://msr-quran-app.vercel.app
+NEXT_PUBLIC_BASE_URL=https://msr-quran-app.vercel.app
+
+# إعدادات الأمان
 ENCRYPTION_KEY=quran-hadith-newsletter-secret-key-2024
 UNSUBSCRIBE_SECRET=unsubscribe-security-token-secret-2024-msr-quran
-# Base URL للتطوير المحلي
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
+
 
 MONGODB_URI=mongodb+srv://code4ever11:Msr_1234@quran-website-alm.j0woigg.mongodb.net/quran_newsletter
 
