--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,25 +2,25 @@
   "dbMcp.provider": "sqlite",
   "dbMcp.connectionString": "C:\\Users\\alrom\\Desktop\\hamadArif\\quran_website\\public\\json\\metadata.json",
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#e08c7c",
-    "activityBar.background": "#e08c7c",
-    "activityBar.foreground": "#15202b",
-    "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#cbf3d2",
-    "activityBarBadge.foreground": "#15202b",
-    "commandCenter.border": "#15202b99",
-    "sash.hoverBorder": "#e08c7c",
-    "statusBar.background": "#d66853",
-    "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#c7482f",
-    "statusBarItem.remoteBackground": "#d66853",
-    "statusBarItem.remoteForeground": "#15202b",
-    "titleBar.activeBackground": "#d66853",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveBackground": "#d6685399",
-    "titleBar.inactiveForeground": "#15202b99"
+    "activityBar.activeBackground": "#a41717",
+    "activityBar.background": "#a41717",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#041c04",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#a41717",
+    "statusBar.background": "#771111",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#a41717",
+    "statusBarItem.remoteBackground": "#771111",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.activeBackground": "#771111",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#77111199",
+    "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#d66853",
+  "peacock.color": "#771111",
   "cSpell.words": ["bismillah"],
   "files.associations": {
     "*.jsx": "javascriptreact",
