--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,13 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
 .env*.local
+.env.local
+.env.development
+.env.production
+*/.env
+**/.env
 
 # vercel
 .vercel
@@ -35,14 +41,88 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# Windsurf IDE
+.windsurf/
+.augment/
 
-.wrangler
-
-#.vscode + .augment
+# IDE and editors
 .vscode/
-.augment/   
+.idea/
+*.swp
+*.swo
+*~
 
-#folder scripte
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary and test files
+tree.txt
+test-*.js
+debug-*.log
+
+# Build and deployment
+.wrangler
 /scripts/
-
 /mcp/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+.env.test
+.env.production
+.env.local
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
