--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "hls.js": "^1.6.7",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "mongodb": "^6.19.0",
     "next": "15.0.3",
